    (>= 1.2.12-1) (cf. #625728).
  * Move powerpc-ibm-utils and powerpc-utils dependencies from
    grub-ieee1275-bin to grub-ieee1275 (closes: #693400).
  * Merge from Ubuntu:
    - Ignore symlink traversal failures in grub-mount readdir
      (LP: #1051306).
    - Fix incorrect initrd minimum address calculation (LP: #1055686).
    - Avoid assuming that gets is declared.

 -- Colin Watson <cjwatson@debian.org>  Thu, 27 Sep 2012 13:25:46 +0100

grub2 (2.00-7) experimental; urgency=low

  * Backport from upstream:
    - Fix stderr leakage from grub-probe in is_path_readable_by_grub.
    - Fix tftp endianness problem.
  * Merge from Ubuntu:
    - Prefer translations from language packs (LP: #537998).  (No-op for
      Debian, but harmless.)
    - Avoid getting confused by inaccessible loop device backing paths
      (LP: #938724).

 -- Colin Watson <cjwatson@debian.org>  Wed, 26 Sep 2012 16:05:07 +0100

grub2 (2.00-6) experimental; urgency=low

  [ Colin Watson ]
  * Adjust package descriptions to talk about update-grub, not update-grub2.
  * Backport from upstream:
    - Fix grub-emu build on FreeBSD.
  * Revert gcc-4.6-multilib build-dependency change from 2.00-1, since
    kfreebsd-i386 and hurd-i386 don't have gcc-4.6-multilib.  Instead, make
    sure to only install efiemu32.o and efiemu64.o on (linux-)i386,
    kopensolaris-i386, and any-amd64.
  * Manually expand @PACKAGE@ symbols in grub-efi.postinst (closes:
    #688725), grub-linuxbios.postinst (closes: #688726), and grub2.postinst
    (closes: #688724).

  [ Debconf translations ]
  * Lithuanian (Rimas Kudelis).  Closes: #675628
  * Galician (Jorge Barreiro).  Closes: #677389
  * Welsh (Daffyd Tomos).
  * Greek (galaxico).  Closes: #685201
  * Romanian (Andrei POPESCU).  Closes: #685477
  * Finnish (Timo Jyrinki).

  [ Cyril Brulebois ]
  * Use xz compression for all binaries to save up some space on CD images
    (closes: #688773).

 -- Colin Watson <cjwatson@debian.org>  Tue, 25 Sep 2012 22:47:03 +0100
